--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,17 +26,24 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 30
-
+    compileSdkVersion 29
+    aaptOptions {
+        noCompress 'tflite'
+        noCompress 'lite'
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.blind_assist"
-        minSdkVersion 16
-        targetSdkVersion 30
+        applicationId "com.example.object_detection"
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
