--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   tflite:
   camera: ^0.5.8+7
   flutter_tts: ^3.0.0
+  speech_to_text: ^2.3.0
 
 dev_dependencies:
   flutter_test:
